2010-06-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r60979.
        http://trac.webkit.org/changeset/60979
        https://bugs.webkit.org/show_bug.cgi?id=40450

        Broke build on Leopard (Requested by kbr_google on #webkit).

        * fast/canvas/webgl/script-tests/texImageTest.js:
        * fast/canvas/webgl/texImageTest-expected.txt:

2010-06-10  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        Delete custom JSC bindings for bufferData, texImage2D and texSubImage2D
        https://bugs.webkit.org/show_bug.cgi?id=40443

        Deleted custom JSC bindings for bufferData, texImage2D and
        texSubImage2D and fixed minor associated issues in code generator
        and IDL. Updated fast/canvas/webgl/texImageTest-expected.txt,
        which now runs as intended. Ran all layout tests, including WebGL
        tests, in Safari.

        * fast/canvas/webgl/script-tests/texImageTest.js:
        * fast/canvas/webgl/texImageTest-expected.txt:

2010-06-10  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Fix Qt-specific event-sender-keydown-frame.html test

        It looks like this test was added without elements required for it work.

        http://bugs.webkit.org/show_bug.cgi?id=20303

        * platform/qt/Skipped:
        * platform/qt/fast/events/event-sender-keydown-frame.html:
        * platform/qt/fast/events/resources/divs.html: Added.

2010-06-10  Dmitry Titov  <dimich@chromium.org>

        Unreviewed, update Chromium test expectations.

        * platform/chromium/test_expectations.txt:
        Disable fast/text/international/khmer-selection.html on Windows regressed by http://trac.webkit.org/changeset/60953
        Skip fast/dom/Window/window-properties-geolocation.html unnecessarily enabled by http://trac.webkit.org/changeset/60956

2010-06-09  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.
