@@ -1,0 +1,3 @@
+Type something into the first input and press tab. The browser should not crash.
+
+PASSED
