@@ -1,3 +1,13 @@
+2010-06-10  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        crash when focus is changed while trying to focus next element
+        https://bugs.webkit.org/show_bug.cgi?id=40407
+
+        * fast/events/focus-change-crash-expected.txt: Added.
+        * fast/events/focus-change-crash.html: Added.
+
 2010-06-10  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r60979.
